[project]
name = "comfydock-env-wan-ati-test"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.8",
    "alembic",
    "av>=14.2.0",
    "comfyui-embedded-docs==0.3.1",
    "comfyui-frontend-package==1.28.8",
    "comfyui-workflow-templates==0.2.11",
    "einops",
    "kornia>=0.7.1",
    "numpy>=1.25.0",
    "pillow",
    "psutil",
    "pydantic~=2.0",
    "pydantic-settings~=2.0",
    "pyyaml",
    "safetensors>=0.4.2",
    "scipy",
    "sentencepiece",
    "spandrel",
    "sqlalchemy",
    "tokenizers>=0.13.3",
    "torch",
    "torchaudio",
    "torchsde",
    "torchvision",
    "tqdm",
    "transformers>=4.37.2",
    "yarl>=1.18.0",
]

[tool.comfydock]
comfyui_version = "v0.3.68"
comfyui_version_type = "release"
comfyui_commit_sha = "265adad858e1f31b66cd3523a02b16f5d34ced52"
python_version = "3.12"
torch_backend = "auto"

[tool.uv]
constraint-dependencies = ["torch==2.9.0+cu129", "torchvision==0.24.0+cu129", "torchaudio==2.9.0+cu129"]
[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources.torch]
index = "pytorch-cu129"

[tool.uv.sources.torchvision]
index = "pytorch-cu129"

[tool.uv.sources.torchaudio]
index = "pytorch-cu129"
